# correspondences

./: .gitignore  CNAME  README.md  asset-manifest.json  correspondences.py  data.py  index.html  package.json  pyproject.toml  run.mjs
CLI/: README.md  data.mjs  package.json
archive/cli/: run.mjs
archive/gui/: pyproject.toml
public/: index.html
src/: App.jsx  index.js
src/components/: Lights.jsx  Planet.jsx  Planets.jsx
src/correspondences/: data.py
src/data/: index.js
src/utils/: index.mjs  makeIncense.js  makeMateria.js
static/js/: main.a8c1b70d.js  main.a8c1b70d.js.LICENSE.txt  main.a8c1b70d.js.map
