[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'correspondences'
version = '0.1'
description = 'incense & materia planetary correspdonces'
readme = 'README.md'
requires-python = '>=3.9'
license = 'GPL-3.0-only'
keywords = []
authors = [
  { name = 'Pseudo Tat', email = 'TatTheWyzard@outlook.com' }
]
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
dependencies = [
  'PySimpleGUI'
]

[project.urls]
Documentation = 'https://github.com/PseudoTat/correspondences#readme'
Issues = 'https://github.com/PseudoTat/correspondences/issues'
Source = 'https://github.com/correspondences/src'

[tool.hatch.version]
path = 'src/correspondences/correspondences.py'
